# prince-of-tennis-server

./: .gitmodules  CMakeLists.txt  COMMUNICATION_FIX.md  NETWORK_BROADCAST_REFACTOR.md  NETWORK_RECEIVE_REFACTOR.md  NETWORK_SEND_REFACTOR.md  PLAYER_DATA_SEPARATION.md  PLAYER_MOVEMENT_BUG_FIX.md  README.md  build.sh  build_run.sh  main.c  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-default.yml
docs/: sequence-diagram.md
game/: game.state.h  game_state.c
physics/: ball_physics.c
src/: log.h  main.cpp  server_constants.h
src/core/: game_update.cpp  game_update.h  server_broadcast.cpp  server_broadcast.h  server_context.h  server_init.cpp  server_init.h  server_loop.cpp  server_loop.h
src/game/: game_phase_manager.cpp  game_phase_manager.h  game_state.cpp  game_state.h  point_judge.cpp  point_judge.h  score_logic.cpp  score_logic.h
src/input_handler/: input_handler.cpp  input_handler.h
src/network/: network.cpp  network.h
src/physics/: ball_physics.cpp  ball_physics.h  court_check.cpp  court_check.h
src/player/: player.cpp  player.h  player_manager.cpp  player_manager.h  player_manneger.cpp  player_manneger.h  player_movement.cpp  player_movement.h
